# amos_24

./: .gitignore  README.md  dm_sl_bk.csv  dm_sl_ej.csv  dm_ss_bk.csv  dm_ss_ej.csv  electoral_college.py  generate.py  master_results copy.csv  master_results.csv  master_results_no_2019.csv  probability_distributions.json  pyproject.toml  results_by_state.json  simulate.py  sj_sl_bk.csv  summary.json  synthetics.py  test.csv  train.py  vis.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: compile_election_data.py
